# oj-eval-codex-064-20260422181143

./: .gitignore  CMakeLists.txt
src/: main.cpp  printf.hpp
